--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,12 @@
             <strong>收件地址:</strong>
             廣東省東莞市虎門鎮龍眼工業路28號139鋪+小跑豬+<span
               class="placeholder"
-              >[手機末三碼]</span
+              >[您的姓名]</span
             >
           </p>
           <p>
             <strong>收 件 人:</strong> 小跑豬+<span class="placeholder"
-              >[手機末三碼]</span
+              >[您的姓名]</span
             >
           </p>
           <p><strong>手機號碼:</strong> 13652554906</p>
