必填身分證字號、倉庫地址簡體字

--- a/public/customer.html
+++ b/public/customer.html
@@ -701,7 +701,7 @@
           </div>
           <div class="form-group">
             <label for="regPhone">聯絡電話</label>
-            <input type="tel" id="regPhone" />
+            <input type="tel" id="regPhone" required />
           </div>
           <div class="form-group">
             <label for="regLine">LINE 暱稱</label>
@@ -712,8 +712,8 @@
             <input type="text" id="regAddress" />
           </div>
           <div class="form-group">
-            <label for="regIdNumber">身分證字號 (選填，清關用)</label>
-            <input type="text" id="regIdNumber" />
+            <label for="regIdNumber">身分證字號 (必填，清關用)</label>
+            <input type="text" id="regIdNumber" required />
           </div>
           <button type="submit" class="btn btn-primary">註冊</button>
           <div style="text-align: center; margin-top: 15px">
