--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         <div class="address-box" id="warehouseAddressBox">
           <p>
             <strong>收件地址:</strong>
-            廣東省東莞市虎門鎮龍眼工業路28號139鋪+小跑豬+<span
+            广东省东莞市虎门镇龙眼工业路28号139铺+小跑猪+<span
               class="placeholder"
               >[您的姓名]</span
             >
