在這裡寫下你的更新說明

--- a/public/customer.html
+++ b/public/customer.html
@@ -755,6 +755,12 @@
             <button class="btn btn-secondary" onclick="openChangePassword()">
               修改密碼
             </button>
+            <a
+              href="/parcel.html"
+              class="btn btn-primary"
+              style="text-decoration: none"
+              >📦 包裹預報</a
+            >
             <a href="/" class="btn btn-secondary" style="text-decoration: none"
               >返回首頁計算器</a
             >
