在這裡寫下你的更新說明

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,66 @@
     <div class="calculator-container">
       <img src="/assets/logo.png" alt="小跑豬 LOGO" class="header-logo" />
 
+      <!-- 快速服務入口 -->
+      <div
+        style="
+          display: grid;
+          grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+          gap: 15px;
+          margin: 20px 0;
+        "
+      >
+        <a
+          href="#calculator"
+          style="
+            background: white;
+            border: 2px solid #e0e0e0;
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            text-decoration: none;
+            color: inherit;
+            transition: all 0.3s;
+          "
+        >
+          <div style="font-size: 36px">🧮</div>
+          <div style="font-weight: bold; margin: 10px 0">運費計算</div>
+        </a>
+
+        <a
+          href="/parcel-public"
+          style="
+            background: white;
+            border: 2px solid #e0e0e0;
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            text-decoration: none;
+            color: inherit;
+            transition: all 0.3s;
+          "
+        >
+          <div style="font-size: 36px">📦</div>
+          <div style="font-weight: bold; margin: 10px 0">包裹預報</div>
+        </a>
+
+        <a
+          href="/customer.html"
+          style="
+            background: white;
+            border: 2px solid #e0e0e0;
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            text-decoration: none;
+            color: inherit;
+            transition: all 0.3s;
+          "
+        >
+          <div style="font-size: 36px">👤</div>
+          <div style="font-weight: bold; margin: 10px 0">會員中心</div>
+        </a>
+      </div>
       <h1>小跑豬專業版傢俱試算器</h1>
 
       <div class="usage-counter">
