新增備註欄

--- a/public/index.html
+++ b/public/index.html
@@ -152,6 +152,37 @@
               <td data-label="材積收費">274 台幣</td>
             </tr>
           </tbody>
+          <div
+            style="
+              margin-top: 15px;
+              padding: 10px 15px;
+              background-color: #d6eaf8;
+              border-left: 4px solid #1a73e8;
+              border-radius: 0 5px 5px 0;
+            "
+          >
+            <strong style="color: #1a73e8">備註：</strong>
+            <ul style="margin: 8px 0; padding-left: 20px; color: #333">
+              <li>
+                海運低消
+                <span style="color: #e74c3c; font-weight: bold">NT.2000</span>
+                元
+              </li>
+              <li>
+                單邊超過
+                <span style="color: #e74c3c; font-weight: bold">300cm</span>
+                收取超長費
+                <span style="color: #e74c3c; font-weight: bold">NT.800</span> 元
+              </li>
+              <li>
+                單件超過
+                <span style="color: #e74c3c; font-weight: bold">100kg</span>
+                收取超重費
+                <span style="color: #e74c3c; font-weight: bold">NT.600</span> 元
+              </li>
+              <li>台灣收件地請自行安排堆高機</li>
+            </ul>
+          </div>
         </table>
       </div>
 
