偏 遠報價大更新2

--- a/public/index.html
+++ b/public/index.html
@@ -450,8 +450,15 @@
           <optgroup label="📍 東部地區">
             <option value="7000" style="color: #dc3545">宜蘭：南澳</option>
             <option value="7000" style="color: #dc3545">宜蘭：釣魚臺</option>
-            <option value="4500">花蓮全區 (NT$4,500/方起，待確認)</option>
-            <option value="4500">台東全區 (NT$4,500/方起，待確認)</option>
+            <option value="4500">
+              宜蘭其他地區 (NT$4,500/方起，請向客服詢問報價)
+            </option>
+            <option value="4500">
+              花蓮全區 (NT$4,500/方起，請向客服詢問報價)
+            </option>
+            <option value="4500">
+              台東全區 (NT$4,500/方起，請向客服詢問報價)
+            </option>
           </optgroup>
         </select>
 
